versioned_docs/version-0.2.4/docs/quick-start.mdx
---
sidebar_position: 2
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

# Quick Start

Get a WukongMP server running in under 5 minutes.

## 1. Download the server

<Tabs groupId="os">
<TabItem value="windows" label="Windows">

[⬇ Download for Windows (x64, v0.2.4)](https://readycodestorage.blob.core.windows.net/wukong-server-releases/wukong-server-win64-0.2.4.zip)

</TabItem>
<TabItem value="linux" label="Linux">

[⬇ Download for Linux (x64, v0.2.4)](https://readycodestorage.blob.core.windows.net/wukong-server-releases/wukong-server-linux64-0.2.4.zip)

</TabItem>
<TabItem value="docker" label="Docker">

```shell
docker pull ghcr.io/readycodeio/wukongmp-server:0.2.4
```

</TabItem>
</Tabs>

## 2. Extract and configure

<Tabs groupId="os">
<TabItem value="windows" label="Windows">

Extract the `.zip` to a folder of your choice. The server is self-contained — no installer needed.

To change the port (default: `9050`), open `config.json` and edit `Server:Port`.

</TabItem>
<TabItem value="linux" label="Linux">

Extract the `.zip` to a folder of your choice. The server is self-contained — no installer needed.

To change the port (default: `9050`), open `config.json` and edit `Server:Port`.

</TabItem>
<TabItem value="docker" label="Docker">

Copy the config file from the image:

```shell
docker create --name wukongmp-tmp ghcr.io/readycodeio/wukongmp-server:0.2.4
docker cp wukongmp-tmp:/app/config.json ./config.json
docker rm wukongmp-tmp
```

Port configuration is handled by remapping the container ports — see step 3.

:::important

The image ships **without mods**. Before starting the container, download the binary package and copy `WukongMp.Sdk` and your chosen game mode mod (`WukongMp.PvP` or `WukongMp.Coop`) into your local `./mods/` folder.

:::

</TabItem>
</Tabs>

## 3. Start the server

<Tabs groupId="os">
<TabItem value="windows" label="Windows">

Double-click `server.exe`, or run it from a terminal:

```shell
.\server.exe
```

</TabItem>
<TabItem value="linux" label="Linux">

```shell
chmod +x server && ./server
```

</TabItem>
<TabItem value="docker" label="Docker">

```shell
docker run \
    -p 9050:9050/udp -p 9050:9050/tcp \
    -v ./data:/app/data \
    -v ./mods:/app/mods \
    -v ./saves:/app/saves \
    -v ./config.json:/app/config.json \
    --name wukongmp-server \
    ghcr.io/readycodeio/wukongmp-server:0.2.4
```

Or with Docker Compose:

```yaml title="docker-compose.yml"
services:
  server:
    image: ghcr.io/readycodeio/wukongmp-server:0.2.4
    container_name: wukongmp-server
    restart: unless-stopped
    ports:
      - "9050:9050/tcp"
      - "9050:9050/udp"
    volumes:
      - ./data:/app/data
      - ./mods:/app/mods
      - ./saves:/app/saves
      - ./config.json:/app/config.json
```

</TabItem>
</Tabs>

## 4. Open the admin panel

Once the server is running, open your browser and go to:

```
http://localhost:9050
```

From here you can manage players, configure mods, and monitor your server in real time.

---

🎉 **You're live!** Share your IP and port `:9050` with players — they'll need the ReadyM Launcher installed to connect.

---

## Next steps

| | |
|---|---|
| [Full Installation Guide](Server/installation) | Advanced configuration and options |
| [Admin Panel](Server/admin-panel) | Manage users, bans, and server settings |
| [Mod Management](Server/mod-management) | Install and configure mods |
| [Server List](Server/server-list) | Register your server publicly |
